--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -28,9 +33,6 @@ jobs:
         docker login --username AWS --password-stdin $ECR_REGISTRY
 
     - name: Build and Push Docker image
-      env:
-        ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
-        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
       run: |
         IMAGE_TAG=$ECR_REGISTRY/$ECR_REPOSITORY:latest
         docker build -t $IMAGE_TAG .
